<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="select_language">Select Language</string>
    <string name="english_ime_name">Bulgarian Keyboard 2</string>
    <string name="english_ime_settings">Settings</string>
    <string name="english_ime_input_options">Input options</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="hit_correction">Correct typing errors</string>
    <string name="hit_correction_summary">Enable input error correction</string>
    <string name="hit_correction_land">Landscape input errors</string>
    <string name="hit_correction_land_summary">Enable input error correction</string>
    <string name="auto_correction">Word suggestions</string>
    <string name="auto_correction_summary">Automatically correct the previous word</string>
    <string name="prediction">Word suggestions</string>
    <string name="prediction_category">Word suggestion settings</string>
    <string name="prediction_summary">Enable auto completion while typing</string>
    <string name="auto_complete_dialog_title">Auto completion</string>
    <string name="prediction_landscape">Increase text field size</string>
    <string name="prediction_landscape_summary">Hide word suggestions in landscape view</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the start of a sentence</string>
    <string name="auto_punctuate">Auto-punctuate</string>
    <string name="auto_punctuate_summary"></string>
    <string name="quick_fixes">Quick fixes</string>
    <string name="quick_fixes_summary">Corrects commonly typed mistakes</string>
    <string name="show_suggestions">Show suggestions</string>
    <string name="show_suggestions_summary">Display suggested words while typing</string>
    <string name="auto_complete">Auto-complete</string>
    <string name="auto_complete_summary">Spacebar and punctuation automatically insert highlighted word</string>
    <string name="prefs_settings_key">Show settings key</string>
    <string-array name="settings_key_modes_values" translatable="false">
        <item>@string/settings_key_mode_auto</item>
        <item>@string/settings_key_mode_always_show</item>
        <item>@string/settings_key_mode_always_hide</item>
    </string-array>
    <string name="settings_key_mode_auto_name">Automatic</string>
    <string name="settings_key_mode_always_show_name">Always show</string>
    <string name="settings_key_mode_always_hide_name">Always hide</string>
    <string-array name="settings_key_modes">
        <item>@string/settings_key_mode_auto_name</item>
        <item>@string/settings_key_mode_always_show_name</item>
        <item>@string/settings_key_mode_always_hide_name</item>
    </string-array>
    <string name="bigram_suggestion">Bigram Suggestions</string>
    <string name="bigram_suggestion_summary">Use previous word to improve suggestion</string>
    <string-array name="prediction_modes">
        <item>None</item>
        <item>Basic</item>
        <item>Advanced</item>
    </string-array>
    <string name="prediction_none" translatable="false">0</string>
    <string name="prediction_basic" translatable="false">1</string>
    <string name="prediction_full"  translatable="false">2</string>
    <string-array name="prediction_modes_values" translatable="false">
        <item>@string/prediction_none</item>
        <item>@string/prediction_basic</item>
        <item>@string/prediction_full</item>
    </string-array>
    <string name="added_word"><xliff:g id="word">%s</xliff:g> : Saved</string>
    <string name="tip_long_press">Hold a key down to see accents (ø, ö, etc.)</string>
    <string name="tip_dismiss">Press the back key \u21B6 to close the keyboard at any point</string>
    <string name="tip_access_symbols">Access numbers and symbols</string>
    <string name="tip_add_to_dictionary">Press and hold the left-most word to add it to the dictionary
        </string>
    <string name="touch_to_continue">Touch this hint to continue »</string>
    <string name="touch_to_finish">Touch here to close this hint and start typing!</string>
    <string name="tip_to_open_keyboard"><b>The keyboard opens any time you touch a text field</b></string>
    <string name="tip_to_view_accents"><b>Touch &amp; hold a key to view accents\n(ø, ö, ô, ó, and so on)</b>
    </string>
    <string name="tip_to_open_symbols"><b>Switch to numbers and symbols by touching this key</b></string>
    <string name="tip_to_close_symbols"><b>Go back to letters by touching this key again</b></string>
    <string name="tip_to_launch_settings"><b>Touch &amp; hold this key to change keyboard settings, like auto complete</b></string>
    <string name="tip_to_start_typing"><b>Try it!</b></string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_done_key">Done</string>
    <string name="label_send_key">Send</string>
    <string name="label_symbol_key">\?123</string>
    <string name="label_phone_key">123</string>
    <string name="label_alpha_key">ABC</string>
    <string name="label_alt_key">ALT</string>
    <string name="voice_warning_title">Voice input</string>
    <string name="voice_warning_locale_not_supported">Voice input is not currently supported for your language, but does work in English.</string>
    <string name="voice_warning_may_not_understand">Voice input is an experimental feature using Google\'s networked speech recognition.</string>
    <string name="voice_warning_how_to_turn_off">To turn off voice input, go to keyboard settings.</string>
    <string name="voice_hint_dialog_message">To use voice input, press the microphone button or slide your finger across the on-screen keyboard.</string>
    <string name="voice_listening">Speak now</string>
    <string name="voice_working">Working</string>
    <string name="voice_initializing"></string>
    <string name="voice_error">Error. Please try again.</string>
    <string name="voice_network_error">Couldn\'t connect</string>
    <string name="voice_too_much_speech">Error, too much speech.</string>
    <string name="voice_audio_error">Audio problem</string>
    <string name="voice_server_error">Server error</string>
    <string name="voice_speech_timeout">No speech heard</string>
    <string name="voice_no_match">No matches found</string>
    <string name="voice_not_installed">Voice search not installed</string>
    <string name="voice_swipe_hint"><b>Hint:</b> Swipe across keyboard to speak</string>
    <string name="voice_punctuation_hint"><b>Hint:</b> Next time, try speaking punctuation like \"period\", \"comma\", or \"question mark\".</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="voice_input">Voice input</string>
    <string-array name="voice_input_modes">
        <item>On main keyboard</item>
        <item>On symbols keyboard</item>
        <item>Off</item>
    </string-array>
    <string name="voice_mode_main" translatable="false">0</string>
    <string name="voice_mode_symbols" translatable="false">1</string>
    <string name="voice_mode_off"  translatable="false">2</string>
    <string-array name="voice_input_modes_values" translatable="false">
        <item>@string/voice_mode_main</item>
        <item>@string/voice_mode_symbols</item>
        <item>@string/voice_mode_off</item>
    </string-array>
    <string-array name="voice_input_modes_summary">
        <item>Mic on main keyboard</item>
        <item>Mic on symbols keyboard</item>
        <item>Voice input is disabled</item>
    </string-array>
    <string name="auto_submit">Auto submit after voice</string>
    <string name="auto_submit_summary">Automatically press enter when searching or going to the next field.</string>
    <string name="open_the_keyboard"><font size="17"><b>Open the keyboard\n</b></font><font size="3">\n</font>Touch any text field.</string>
    <string name="close_the_keyboard"><font size="17"><b>Close the keyboard\n</b></font><font size="3">\n</font>Press the Back key.</string>
    <string name="touch_and_hold"><font size="17"><b>Touch \u0026 hold a key for options\n</b></font><font size="3">\n</font>Access punctuation and accents.</string>
    <string name="keyboard_settings"><font size="17"><b>Keyboard settings\n</b></font><font size="3">\n</font>Touch \u0026 hold the <b>\?123\</b> key.</string>
    <string name="popular_domain_0">".com"</string>
    <string name="popular_domain_1">".net"</string>
    <string name="popular_domain_2">".org"</string>
    <string name="popular_domain_3">".gov"</string>
    <string name="popular_domain_4">".edu"</string>
    <string name="selectInputMethod">Select input method</string>
    <string name="language_selection_title">Input languages</string>
    <string name="language_selection_summary">Slide finger on spacebar to change language</string>
    <string name="hint_add_to_dictionary">\u2190 Touch again to save</string>
    <string name="has_dictionary">Dictionary available</string>
    <string name="prefs_enable_log">Enable user feedback</string>
    <string name="prefs_description_log">Help improve this input method editor by automatically sending usage statistics and crash reports to Google.</string>
    <string name="prefs_enable_recorrection">Touch to correct words</string>
    <string name="prefs_enable_recorrection_summary">Touch entered words to correct them</string>
    <string name="keyboard_layout">Keyboard Theme</string>
    <string name="layout_basic" translatable="false">Basic</string>
    <string name="layout_high_contrast" translatable="false">Basic (High Contrast)</string>
    <string name="layout_stone_bold"  translatable="false">Stone (bold)</string>
    <string name="layout_stone_normal"  translatable="false">Stone (normal)</string>
    <string name="layout_gingerbread"  translatable="false">Gingerbread</string>
    <string-array name="keyboard_layout_modes" translatable="false">
        <item>@string/layout_basic</item>
        <item>@string/layout_high_contrast</item>
        <item>@string/layout_stone_normal</item>
        <item>@string/layout_stone_bold</item>
        <item>@string/layout_gingerbread</item>
    </string-array>
    <string name="navigate_settings">1. Enable Keyboard</string>
    <string name="navigate_input_method">2. Select Input Method</string>
    <string name="more_info">For more information please visit:</string>
    <string name="more_info_link">http://bulkey.googlecode.com</string>
    <string name="more_problems">For any installation problems visit: </string>
    <string name="more_problems_link">http://code.google.com/p/bulkey/wiki/Installation</string>
    <string name="hwKeyboardInfo">Hardware keyboard tips for the Bulgarian layout:\n
    \n
&#160;&#160;Toggle keyboards: shift-space\n
    \n
&#160;&#160;Phonetic Keyboard\n
&#160;&#160;&#160;&#160;s + h = ш\n
&#160;&#160;&#160;&#160;s + h + t = щ\n
&#160;&#160;&#160;&#160;y + u = ю\n
&#160;&#160;&#160;&#160;c + h = ч\n
\n
&#160;&#160;BDS Standard\n
&#160;&#160;&#160;&#160;q = ,\n
&#160;&#160;&#160;&#160;q + q = .\n
&#160;&#160;&#160;&#160;v = ц\n
&#160;&#160;&#160;&#160;@ = л\n
&#160;&#160;&#160;&#160;. = б\n
&#160;&#160;&#160;&#160;ц + ц = ч\n
\n
&#160;&#160;Phonetic Keyboard (BDS Standard)\n
&#160;&#160;&#160;&#160;s + h = ш\n
&#160;&#160;&#160;&#160;s + h + t = щ\n
&#160;&#160;&#160;&#160;y + u = ю\n
&#160;&#160;&#160;&#160;c + h = ч\n
&#160;&#160;&#160;&#160;@ = я\n
&#160;&#160;&#160;&#160;y + y = ь\n
    </string>
    <string name="some_thoughful_text">Step 1 - Press the first button to go to system settings and enable Bulgarian Keyboard 2.\n\nStep 2 - Pressing the second button will allow you to activate it.\n\nStep 3 - Start writing.</string>
</resources>